--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,225 +1,29 @@
 /**index.wxss**/
-.bg {
-  width: 100%;
-  height: 100%;
-}
-.daoju-wrap {
-  padding: 18rpx 0 0 16rpx;
-  height: 174rpx;
-  display: flex;
-}
-.daoju {
-  position: relative;
-  margin-right: 40rpx;
-  width: 234rpx;
-  height: 70rpx;
-}
-.gold {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 73rpx;
-  height: 71rpx;
-  z-index: 2;
-}
-.add {
-  position: absolute;
-  right: 0;
-  top: 4rpx;
-  width: 61rpx;
-  height: 62rpx;
-  z-index: 2;
-}
-.crystal {
-  position: absolute;
-  left: 0;
-  top: 2rpx;
-  width: 69rpx;
-  height: 66rpx;
-  z-index: 2;
-}
-.num {
-  position: absolute;
-  left:40rpx;
-  top:10rpx;
-  text-align: center;
-  color: #fff;
-  width: 165rpx;
-  height: 52rpx;
-  font-size: 32rpx;
-  line-height: 52rpx;
-  background: #c83f41;
-  box-shadow:  0 2rpx 2rpx #eb7272, inset 0 3rpx 3rpx #a03234;
-}
-
 .title {
-  display: block;
-  text-align: center;
-  font: bold 36rpx 'Microsoft YaHei';
-  color: #fcdd71;
-  text-decoration: underline;
+  height: 134rpx;
 }
-.arrow {
-  margin-left: 12rpx;
-  width: 22rpx;
-  height: 34rpx;
-  vertical-align: middle;
-}
-
 .money-select {
-  height: 403rpx;
-  margin-top: 50rpx;
-  padding: 10rpx 26rpx 0;
-  background: url("https://gengxin.odao.com/update/h5/guessNum/index/pice.png") no-repeat;
-  background-size: 749rpx 403rpx;
-}
-
-.tab {
-  flex: 1;
-  text-align: center;
-  font: bold 40rpx  'Microsoft YaHei';
-  color: #7f5831;
-  line-height: 104rpx;
-}
-.active {
-  text-shadow: 3rpx 3rpx 3rpx #fffeae;
-  color: #7d2c39;
-  background: #fee271;
-}
-
-.gold-select {
-  margin-top: 34rpx;
+  padding: 121rpx 25rpx 0;
+  height: 928rpx;
+  background: url('https://gengxin.odao.com/update/h5/wangcai/index/bg.png') no-repeat; 
+  background-size: 750rpx 928rpx; 
 }
 .one-select {
-  position: relative;
-  width: 195rpx;
-  height: 83rpx;
-  background: url("https://gengxin.odao.com/update/h5/guessNum/index/btn-green.png");
-  background-size: 195rpx 83rpx;
-
+  width: 181rpx;
+  height: 270rpx;
+  background: url('https://gengxin.odao.com/update/h5/wangcai/index/package.png') no-repeat;
+  background-size: 181rpx 270rpx;
 }
-.one-select-active {
-  background-image: url("https://gengxin.odao.com/update/h5/guessNum/index/btn-red.png");
-}
-
-.gold-small {
-  position: absolute;
-  left: 20rpx;
-  top: 10rpx;
-  width: 59rpx;
-  height: 57rpx;
-}
-.gold-num {
-  margin-left: 85rpx;
-  font: bold 36rpx/83rpx 'Microsoft YaHei';
-  color: #fff;
-}
-.no-margin {
-  display: block;
-  margin: 0;
-  text-align: center;
-}
-
-.select {
-  margin-top: 44rpx;
-  height: 67rpx;
-}
-.type-select {
+.money-content {
   display: inline-block;
-  margin: 13rpx 20rpx; 
-  border: 5rpx solid #7c5a37;
-  border-radius: 50%;
-  width: 32rpx;
-  height: 35rpx;
-  vertical-align: top;
-}
-.type-content {
-  display: inline-block;
-  margin-right: 25rpx;
-  font: bold 38rpx/67rpx 'Microsoft YaHei';
-  color: #7c5a37;
-  vertical-align: top;
-}
-.input-money {
-  display: inline-block;
-  width: 234rpx;
-  height: 67rpx;
-  font-size: 31rpx;
-  color: #fbc887;
-  border-radius: 10rpx;
+  margin-top: 200rpx;
+  width: 100%;
   text-align: center;
-  background: #7c5a37;
-  vertical-align: top;
+  font: bold 46rpx/46rpx 'Microsoft YaHei';
+  color: #fefcd2;
+  vertical-align: middle;
 }
-
-.play {
-  margin-top: 59rpx;
-  padding-top: 21rpx;
-  width: 338rpx;
-  height: 84rpx;
-  font-size: 32rpx;
-  color: #fff;
-  text-align: center;
-  -webkit-text-stroke: 2rpx #371a1e;
-  -webkit-text-fill-color: #fff;
-  background: url("https://gengxin.odao.com/update/h5/guessNum/index/btn.png");
-  background-size: 338rpx 105rpx;
-}
-
-.how-play {
-  position: relative;
-  margin-top: 70rpx;
-  height: 50rpx;
-  width: 100vw;
-  font: 30rpx/1 'Microsoft YaHei';
-  color: #fcdd71;
-}
- .play-intro {
-  position: absolute;
-  left: 125rpx;
-  top: 10rpx;
-  height: 40rpx;
-  text-decoration: underline; 
-}
-.contact-service {
-  position: absolute;
-  right: 125rpx;
-  top: 10rpx;
-  height: 40rpx;
-  text-decoration: underline; 
-}
-.contact {
-  top: 0;
-  opacity: 0;
-  z-index: 2;
-} 
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  border-top: 2rpx solid #bd1321;
-  width: 100vw;
-  height: 140rpx;
-}
-.btn {
-  flex: 1;
-}
-
-.record {
-  margin: 9rpx 0 12rpx;
-  width: 57rpx;
-  height: 79rpx;
-}
-
-.service {
-  margin: 13rpx 0 12rpx;
-  width: 71rpx;
-  height: 71rpx;
-}
-
-.tab-content {
-  font-size: 24rpx;
-  line-height: 1;
-  color: #fff;
+.yuan {
+   font: bold 40rpx/46rpx 'Microsoft YaHei';
+   vertical-align: middle;
 }
