--- a/pages/record/record.wxss
+++ b/pages/record/record.wxss
@@ -1,124 +1,134 @@
 /* pages/record/record.wxss */
 .el-select {
-  height: 548rpx;
-  margin-top: 50rpx;
-  padding: 10rpx 26rpx 0;
-  background: url("https://gengxin.odao.com/update/h5/guessNum/record/bg.png") no-repeat;
-  background-size: 749rpx 548rpx;
+  padding-top: 12rpx;
+}
+.select {
+  margin: 0 auto 25rpx;
+  height: 72rpx;
+  width: 424rpx;
+  background: #8e1925;
+  border-radius: 50rpx;
+  overflow: hidden;
 }
 
 .tab {
   flex: 1;
   text-align: center;
-  font: bold 40rpx  'Microsoft YaHei';
-  color: #7f5831;
-  line-height: 84rpx;
+  font: 30rpx/72rpx  'Microsoft YaHei';
+  color: #fff9e3;
 }
 .active {
-  text-shadow: 3rpx 3rpx 3rpx #fffeae;
-  color: #7d2c39;
-  background: #fee271;
+  color: #b21f2e;
+  font: bold 30rpx/72rpx  'Microsoft YaHei';
+  background: #fff9e3;
 }
 .content {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .avatar {
-  margin: 18rpx 0 20rpx;
-  width: 120rpx;
-  height: 120rpx;
+  margin: 0 0 18rpx;
+  width: 130rpx;
+  height: 130rpx;
   border: 4rpx solid #fff;
   border-radius: 50%;
 }
 .nickname {
-  font: bold 32rpx/1 "Microsoft YaHei";
-  color: #7f5831;
+  font: 40rpx/1 "Microsoft YaHei";
+  color: #fff;
 }
-.money-num {
-  margin: 34rpx 0 54rpx;
-  width: 252rpx;
-  height: 103rpx;
-  border-radius: 10rpx;
-  background: #a17a4f;
+.money-wrap {
+ position: relative;
+ width: 100vw;
+ height: 306rpx;
+ background: url("https://gengxin.odao.com/update/h5/wangcai/guess/bg.png") left bottom no-repeat;
+ background-size: 750rpx 140rpx;
 }
+.money-img {
+  width: 306rpx;
+  height: 344rpx;
+}
+.num-left {
+  position: absolute;
+  left: 0;
+  top: -74rpx;
+}
+.num-right {
+  position: absolute;
+  right: 0;
+  top: -74rpx;
+} 
 .money-content {
-  padding: 14rpx 0 6rpx;
-  font: bold 32rpx/1 "Microsoft YaHei";
-  color: #ffc88d;
+  position: absolute;
+  left: 95rpx;
+  top: 195rpx;
+  width: 160rpx;
+  text-align: center;
+  font: bold 44rpx/1 "Microsoft YaHei";
+  color: #e17f00;
 }
-.num {
-  font-weight: normal;
+.money-content-right {
+  left: 50rpx;
 }
-.toMoney {
-  width: 26rpx;
-  height: 32rpx;
-  vertical-align: top;
-}
-.package {
-  margin-top: 1rpx;
-  width: 25rpx;
-  height: 30rpx;
-  vertical-align: top;
-}
-.service {
-  margin-top: 1rpx;
-  width: 30rpx;
-  height: 30rpx;
-  vertical-align: top;
-}
-.tab-content {
-  display: inline-block;
-  margin-left: 5rpx;
-  font-size: 30rpx;
-  line-height: 32rpx; 
-  color: #7f5831;
-  vertical-align: top;
+
+.list {
+  position: relative;
 }
 .btn-wrap {
-  position: relative;
+  padding-top: 10rpx;
+}
+.btn-img {
+  padding-bottom: 25rpx;
+  width: 212rpx;
+  height: 59rpx;
 }
 .btn {
   position: absolute;
-  left: 0;
+  right: 25rpx;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 212rpx;
+  height: 59rpx;
   opacity: 0;
 }
-
-.guess-record-title {
-  margin-top: -20rpx;
-}
 .record-list {
-  padding: 0 6rpx;
-  height: 570rpx;
-  background: rgba(143, 45, 46, 0.6);
-}
-.record-bg {
-  width: 375rpx;
-  height: 61rpx;
-  vertical-align: bottom;
-}
-.bg-l {
-  transform: rotateY(180deg)
-}
-.guess-record-content {
-  position: absolute;
-  left: 288rpx;
-  top: 23rpx;
-  padding-top: 12rpx;
-  width: 178rpx;
-  height: 52rpx;
-  color: #65400b;
-  text-align: center;
-  font: bold 34rpx/1 "Microsoft YaHei";
-  background: url('https://gengxin.odao.com/update/h5/guessNum/guess/record.png') no-repeat;
-  background-size: 178rpx 64rpx;
+  font: 28rpx/104rpx "Microsoft YaHei";
+  padding: 0 25rpx;
+  box-sizing: border-box;
+  min-height: 505rpx;
+  color: #b21f2e;
+  background: #fff9e3;
 }
 .list {
-  text-indent: 14rpx;
-  font: 28rpx/108rpx "Microsoft YaHei";
-  height: 108rpx;
-  border-bottom: 3rpx solid #d34c4b;
+  background: #fff9e3;
+}
+.one-list {
+  display: flex;
+  justify-content: space-between;
+  height: 104rpx;
+  border-bottom: 2rpx solid #d88b88;
+}
+.one-title {
+  display: inline-block;
+  text-indent: 95rpx;
+  height: 100%;
+  background: url('https://gengxin.odao.com/update/h5/wangcai/record/package-icon.png') 14rpx 10rpx no-repeat;
+  background-size: 57rpx 88rpx;
+}
+.one-sum {
+  padding-right: 10rpx;
+}
+.user-avatar {
+  margin-top: 10rpx;
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+  border: 2rpx solid #fff;
+}
+.user-nickname {
+  display: inline-block;
+  margin-left: 10rpx;
+  font: 28rpx/104rpx "Microsoft YaHei";
+  vertical-align: top;
 }
