--- a/pages/rank/rank.wxss
+++ b/pages/rank/rank.wxss
@@ -1,7 +1,15 @@
 /* pages/rank/rank.wxss */
+.wrap{
+  background-color: #fff9e3;
+  height: 100vh;
+}
 .header {
+  height: 370rpx;
+}
+.info{
   display: flex;
   height: 230rpx;
+  width: 100%;
   background-color: #b21f2e;
 }
 .avatar-wrap {
@@ -30,17 +38,122 @@
   border-radius: 26rpx;
 }
 .package {
-  margin-top: -10rpx;
-  width: 58rpx;
-  height: 71rpx;
+  margin-top: 8rpx;
+  margin-left: 20rpx;
+  width: 27rpx;
+  height: 41rpx;
   vertical-align: top;
 }
 .num {
   display: inline-block;
-  width: 130rpx;
-  text-align: center;
+  width: 135rpx;
+  text-align: right;
   font-size: 32rpx;
   vertical-align: top;
   line-height: 52rpx; 
 }
-
+.bg-cir{
+  width: 750rpx;
+  height:140rpx;
+}
+.result{
+  margin-top: -226rpx;
+}
+.result-bg{
+  width: 706rpx;
+  height: 231rpx;
+  background-image: url("https://gengxin.odao.com/update/h5/wangcai/rank/num-bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+}
+.result-num{
+  height: 100%;
+  width: 176rpx;
+  align-items: center;
+}
+.num-icon{
+  width: 100rpx;
+  height: 134rpx;
+}
+.select-item{
+  height: 120rpx;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.select-icon{
+  width: 212rpx;
+  height: 59rpx;
+}
+.slide-cut{
+  width: 100%;
+  height: 20rpx;
+  background-color: #fae3c4;
+}
+.rank-info{
+  width: 100%;
+}
+.rank-title{
+  width: 191rpx;
+  height: 32rpx;
+  margin-top: 20rpx;
+}
+.person-list{
+  position: fixed;
+  top: 576rpx;
+  bottom: 0;
+  width: 100%;
+  flex-wrap: wrap;
+}
+.person-info{
+  width: 705rpx;
+  min-height: 136rpx;
+  display: flex;
+  border-bottom: 1rpx solid #b21f2e;
+}
+.ranking{
+  font-family: "微软雅黑";
+  font-size: 40rpx;
+  font-weight: bold;
+  display: block;
+  margin-top: 65rpx;
+  margin-right: 29rpx;
+}
+.person-touxiang{
+  width: 104rpx;
+  height: 112rpx;
+  margin-top: 21rpx;
+  margin-right: 18rpx;
+}
+.person-avatar{
+  width: 91rpx;
+  height:91rpx;
+  border-radius: 50rpx;
+  margin: 18rpx 3rpx 3rpx 9rpx;
+}
+.first{
+  background-image: url("https://gengxin.odao.com/update/h5/wangcai/rank/1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  align-items: center;
+}
+.record{
+  min-height: 61rpx;
+  margin-top: 34rpx;
+  display: flex;
+  flex-direction: column;
+}
+.record-info{
+  font-family: "微软雅黑";
+  font-size: 28rpx;
+  color: #b21f2e;
+}
+.rank-result{
+  position: absolute;
+  right: 0;
+}
+.ranking-first{
+  color: #ffc107;
+}
