--- a/pages/share/share.wxml
+++ b/pages/share/share.wxml
@@ -13,7 +13,7 @@
     <image class='to-friend-img' src='https://gengxin.odao.com/update/h5/wangcai/share/transmit.png'></image>
     <button class='to-friend-btn' open-type='share'></button>
   </view>
-  <image class='to-friendC' src='https://gengxin.odao.com/update/h5/wangcai/share/friendC-share.png'></image>
-  <text class='try'>我也试一试</text>
+  <image class='to-friendC' bindtap='shareFriendC' src='https://gengxin.odao.com/update/h5/wangcai/share/friendC-share.png'></image>
+  <text class='try' bindtap='totry'>我也试一试</text>
 </view>
-<!-- <canvas canvas-id="myCanvas" style="border: 1px solid;"/> -->
+ <canvas class='{{canvasIndex?"canvas canvas-index" : "canvas"}}' canvas-id="myCanvas"/> 
